src/test/deca/context/valid/print_cont_val_01.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: Compare operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   int x = 4;
   print(x==5);
}
