src/test/deca/context/invalid/arith_op_type_mismatch_03.deca
// Description:
//     Operation arithmetique avec des mauvais types.
//
// Resultats:
//    Ligne 12: Arithmetic operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   boolean y = true;
   int x = 4.8128921/y;
}
